--- a/style/style.css
+++ b/style/style.css
@@ -1,21 +1,101 @@
+@font-face {
+  font-family: "Poppins-Black";
+  src: url("../src/Poppins/Poppins-Black.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Poppins-Medium";
+  src: url("../src/Poppins/Poppins-Medium.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Poppins-ExtraLight";
+  src: url("../src/Poppins/Poppins-ExtraLight.ttf") format("truetype");
+}
+
 * {
   margin: 0px;
   padding: 0px;
+  scroll-behavior: smooth;
+  text-decoration: none;
+}
+
+@media (prefers-reduced-motion) {
+  * {
+    scroll-behavior: none;
+  }
+}
+
+.navigation {
+  position: absolute;
+  width: 100%;
+  height: 200%;
+  top: 0px;
+}
+
+.navigation__div {
+  position: -webkit-sticky;
+  position: sticky;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  background-color: white;
+  -webkit-filter: drop-shadow(0 0 5vh rgba(0, 173, 173, 0.3));
+          filter: drop-shadow(0 0 5vh rgba(0, 173, 173, 0.3));
+  z-index: 1;
+  top: 0px;
+}
+
+.navigation__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.navigation__links > a {
+  font-family: "Poppins-Medium", sans-serif;
+  font-size: calc(1vh + 1vw);
+  color: #00adad;
+  margin: calc(0.9vh + 0.9vw);
 }
 
 .background {
   height: 100%;
-  width: 100vw;
-  background-color: black;
+  width: 100%;
+  background-color: #00adad;
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  z-index: -999;
+  z-index: 998;
 }
 
 .background__canvas {
+  opacity: 0.6;
   height: 100%;
-  width: 100vw;
+  width: 100%;
+  position: absolute;
+  z-index: 999;
+}
+
+.projects {
+  height: 100%;
+  width: 100%;
+  top: 100%;
+  background-color: white;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 /*# sourceMappingURL=style.css.map */
