--- a/style/style.scss
+++ b/style/style.scss
@@ -1,18 +1,87 @@
+// variables
+$base_color: white;
+$accent_color: rgb(0, 173, 173);
+
+// fonts
+@font-face {
+    font-family: "Poppins-Black";
+    src: url("../src/Poppins/Poppins-Black.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Poppins-Medium";
+    src: url("../src/Poppins/Poppins-Medium.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Poppins-ExtraLight";
+    src: url("../src/Poppins/Poppins-ExtraLight.ttf") format("truetype");
+}
+
+// scss
 * {
     margin: 0px;
     padding: 0px;
+    scroll-behavior: smooth;
+    @media (prefers-reduced-motion) { // toning down animations in order to make the site more accesible
+        scroll-behavior: none;
+    }
+    text-decoration: none;
+}
+
+.navigation {
+    position: absolute;
+    width: 100%;
+    height: 200%;
+    top: 0px;
+}
+
+.navigation__div {
+    position: sticky;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    background-color: $base_color;
+    filter: drop-shadow(0 0 5vh rgba($accent_color, 0.3));
+    z-index: 1;
+    top: 0px;
+}
+
+.navigation__links {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.navigation__links > a {
+    font-family: "Poppins-Medium", sans-serif;
+    font-size: calc(1vh + 1vw);
+    color: $accent_color;
+    margin: calc(0.9vh + 0.9vw);
 }
 
 .background {
     height: 100%;
-    width: 100vw;
-    background-color: black;
+    width: 100%;
+    background-color: $accent_color;
     position: absolute;
     display: flex;
-    z-index: -999;
+    z-index: 998;
 }
 
 .background__canvas {
+    opacity: 0.6;
     height: 100%;
-    width: 100vw;
+    width: 100%;
+    position: absolute;
+    z-index: 999;
+} 
+
+.projects {
+    height: 100%;
+    width: 100%;
+    top: 100%;
+    background-color: $base_color;
+    position: absolute;
+    display: flex;
 }
