--- a/style/style.scss
+++ b/style/style.scss
@@ -1,8 +1,8 @@
-// variables
+//variables
 $base_color: white;
-$accent_color: rgb(0, 173, 173);
+$accent_color: #461661;
 
-// fonts
+//fonts
 @font-face {
     font-family: "Poppins-Black";
     src: url("../src/Poppins/Poppins-Black.ttf") format("truetype");
@@ -18,7 +18,7 @@ $accent_color: rgb(0, 173, 173);
     src: url("../src/Poppins/Poppins-ExtraLight.ttf") format("truetype");
 }
 
-// scss
+//scss
 * {
     margin: 0px;
     padding: 0px;
@@ -29,10 +29,16 @@ $accent_color: rgb(0, 173, 173);
     text-decoration: none;
 }
 
+h1 {
+    font-family: "Poppins-Medium", sans-serif;
+    color: $accent_color;
+    font-size: calc(3vh + 3vw);
+}
+
 .navigation {
     position: absolute;
     width: 100%;
-    height: 200%;
+    height: 300%;
     top: 0px;
 }
 
@@ -47,6 +53,16 @@ $accent_color: rgb(0, 173, 173);
     top: 0px;
 }
 
+.navigation__svg {
+    width: 5vw;
+    padding: calc(1vh + 1vw);
+}
+
+.navigation__svg > svg {
+    z-index: 1000 !important;
+    fill: $accent_color;
+}
+
 .navigation__links {
     display: flex;
     align-items: center;
@@ -55,7 +71,7 @@ $accent_color: rgb(0, 173, 173);
 
 .navigation__links > a {
     font-family: "Poppins-Medium", sans-serif;
-    font-size: calc(1vh + 1vw);
+    font-size: calc(0.7vh + 0.7vw);
     color: $accent_color;
     margin: calc(0.9vh + 0.9vw);
 }
@@ -69,19 +85,93 @@ $accent_color: rgb(0, 173, 173);
     z-index: 998;
 }
 
+.background__logo {
+    animation: fade_in_logo 2s ease-in-out;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1 !important;
+    z-index: 1000;
+}
+
+.background__logo > svg {
+    width: 10vw;
+    @media (orientation: portrait) {
+        width: 40vw;
+    }
+    fill: $base_color;
+}
+
 .background__canvas {
-    opacity: 0.6;
+    animation: fade_in 4s ease-in-out;
+    opacity: 0.3;
     height: 100%;
     width: 100%;
     position: absolute;
     z-index: 999;
-} 
+}
 
-.projects {
-    height: 100%;
+.about {
+    min-height: 100%;
     width: 100%;
     top: 100%;
+    background-color: whitesmoke;
+    position: absolute;
+    display: flex;
+}
+
+.about__h1 {
+    position: absolute;
+    top: 30%;
+    left: 30%;
+}
+
+.projects {
+    min-height: 100%;
+    width: 100%;
+    top: 200%;
     background-color: $base_color;
     position: absolute;
     display: flex;
+}
+
+.projects__h1 {
+    position: absolute;
+    top: 30%;
+    right: 30%;
+}
+
+.contact {
+    min-height: 60%;
+    width: 100%;
+    top: 300%;
+    background-color: $accent_color;
+    position: absolute;
+    display: flex;
+}
+
+@keyframes fade_in {
+    0% {
+        opacity: 0;
+    }
+    15% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0.3
+    }
+}
+
+@keyframes fade_in_logo {
+    0% {
+        opacity: 0;
+    }
+    10% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
