--- a/style/style.css
+++ b/style/style.css
@@ -123,10 +123,7 @@ strong {
 
 .about {
   padding: 10vw;
-  background-image: url("./about_bg.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: whitesmoke;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
