--- a/style/style.scss
+++ b/style/style.scss
@@ -213,7 +213,7 @@ strong {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
 
 .contact__h1 {
@@ -223,7 +223,7 @@ strong {
 }
 
 .contact__div {
-    width: 80vw;
+    width: 70vw;
     padding: 10vw;
     font-size: calc(1vh + 1vw);
     color: $base_color;
