--- a/style/style.scss
+++ b/style/style.scss
@@ -106,10 +106,6 @@ strong {
 .about {
     padding: 10vw;
     background-color: whitesmoke;
-    // background-image: url('./about_bg.jpg');
-    // background-position: center;
-    // background-repeat: no-repeat;
-    // background-size: cover;
     display: flex;
     flex-direction: column;
     align-content: space-between;
@@ -207,6 +203,7 @@ strong {
 
 .contact {
     width: 100%;
+    height: 100vh;
     top: 100%;
     background-color: $accent_color;
     position: absolute;
@@ -239,13 +236,16 @@ strong {
     align-items: center;
     justify-content: center;
     flex-direction: row;
+    @media (orientation: portrait) {
+        flex-direction: column;
+    }
 }
 
 .contact__details > a > img {
     width: 3vw;
     padding: 1.5vw;
     @media (orientation: portrait) {
-        width: 8vw;
+        width: 12vw;
         padding: 3vw;
     }
 }
@@ -254,6 +254,7 @@ strong {
     width: 5vw;
     @media (orientation: portrait) {
         width: 10vw;
+        padding-top: 15vh;
     }
     fill: $base_color;
 }
