--- a/style/style.scss
+++ b/style/style.scss
@@ -4,315 +4,319 @@ $accent_color: #461661;
 
 //fonts
 @font-face {
-    font-family: "Poppins-Black";
-    src: url("../src/Poppins/Poppins-Black.ttf") format("truetype");
+  font-family: "Poppins-Black";
+  src: url("../src/Poppins/Poppins-Black.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: "Poppins-Medium";
-    src: url("../src/Poppins/Poppins-Medium.ttf") format("truetype");
+  font-family: "Poppins-Medium";
+  src: url("../src/Poppins/Poppins-Medium.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: "Poppins-Regular";
-    src: url("../src/Poppins/Poppins-Regular.ttf") format("truetype");
+  font-family: "Poppins-Regular";
+  src: url("../src/Poppins/Poppins-Regular.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: "Poppins-ExtraLight";
-    src: url("../src/Poppins/Poppins-ExtraLight.ttf") format("truetype");
+  font-family: "Poppins-ExtraLight";
+  src: url("../src/Poppins/Poppins-ExtraLight.ttf") format("truetype");
 }
 
 //scss
 * {
-    margin: 0px;
-    padding: 0px;
-    scroll-behavior: smooth;
-    @media (prefers-reduced-motion) { // toning down animations in order to make the site more accesible
-        scroll-behavior: none;
-    }
-    text-decoration: none;
+  margin: 0px;
+  padding: 0px;
+  scroll-behavior: smooth;
+  @media (prefers-reduced-motion) {
+    // toning down animations in order to make the site more accesible
+    scroll-behavior: none;
+  }
+  text-decoration: none;
 }
 
-.br-mobile { // controlling the break line on mobile viewport
-    @media (orientation: landscape) {
-        display: none;
-    }
+.br-mobile {
+  // controlling the break line on mobile viewport
+  @media (orientation: landscape) {
+    display: none;
+  }
 }
 
 h1 {
-    font-family: "Poppins-Medium", sans-serif;
-    color: $accent_color;
-    font-size: calc(3vh + 3vw);
+  font-family: "Poppins-Medium", sans-serif;
+  color: $accent_color;
+  font-size: calc(3vh + 3vw);
 }
 
 h2 {
-    font-family: "Poppins-ExtraLight", sans-serif;
-    color: $accent_color;
-    font-size: calc(1.2vh + 1.2vw);
+  font-family: "Poppins-ExtraLight", sans-serif;
+  color: $accent_color;
+  font-size: calc(1.2vh + 1.2vw);
 }
 
 strong {
-    font-family: "Poppins-Regular", sans-serif;
+  font-family: "Poppins-Regular", sans-serif;
 }
 
 a {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 a:visited {
-    color: $accent_color;
+  color: $accent_color;
 }
 
 a:link {
-    color: $accent_color;
+  color: $accent_color;
 }
 
 .background {
-    height: 100%;
-    width: 100%;
-    background-color: $accent_color;
-    position: fixed;
-    @media (orientation: portrait) {
-        position: absolute; // unfortunately, the address bar caused some unwanted movement
-    }
-    display: flex;
+  height: 100%;
+  width: 100%;
+  background-color: $accent_color;
+  position: fixed;
+  @media (orientation: portrait) {
+    position: absolute; // unfortunately, the address bar caused some unwanted movement
+  }
+  display: flex;
 }
 
 .background__logo {
-    animation: fade_in_logo 2s ease-in-out;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 1 !important;
-    z-index: 1000;
+  animation: fade_in_logo 2s ease-in-out;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 1 !important;
+  z-index: 1000;
 }
 
 .background__logo > svg {
-    width: 10vw;
-    @media (orientation: portrait) {
-        width: 40vw;
-    }
-    fill: $base_color;
+  width: 10vw;
+  @media (orientation: portrait) {
+    width: 40vw;
+  }
+  fill: $base_color;
 }
 
 .background__canvas {
-    animation: fade_in 4s ease-in-out;
-    opacity: 0.3;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    z-index: 999;
+  animation: fade_in 4s ease-in-out;
+  opacity: 0.3;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 999;
 }
 
 .contents {
-    position: absolute;
-    top: 100%;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+  position: absolute;
+  top: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .about {
-    padding: 10vw;
-    background-color: whitesmoke;
-    display: flex;
-    flex-direction: column;
-    align-content: space-between;
-    align-items: center;
-    justify-content: center;
+  padding: 10vw;
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  align-items: center;
+  justify-content: center;
 }
 
 .about__h1 {
-    padding-top: calc(2vh + 2vw);
-    text-align: center;
+  padding-top: calc(2vh + 2vw);
+  text-align: center;
 }
 
 .about__h2 {
-    padding: calc(2vh + 2vw);
-    text-align: left;
+  padding: calc(2vh + 2vw);
+  text-align: left;
 }
 
 .projects {
-    padding: 10vw;
-    background-color: $base_color;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    z-index: 1;
+  padding: 10vw;
+  background-color: $base_color;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  z-index: 1;
 }
 
 .projects__div {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    flex-direction: column;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .projects__h1 {
-    padding-top: calc(2vh + 2vw);
-    text-align: center;
+  padding-top: calc(2vh + 2vw);
+  text-align: center;
 }
 
 .projects__h2 {
-    padding: calc(2vh + 2vw);
-    text-align: center;
+  padding: calc(2vh + 2vw);
+  text-align: center;
 }
 
 .projects__showcase {
-    padding-top: calc(2vh + 2vw);
-    display: flex;
-    flex-direction: row;
-    @media (orientation: portrait) {
-        flex-direction: column;
-    }
-    justify-content: space-around;
-    align-content: center;
+  padding-top: calc(2vh + 2vw);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  @media (orientation: portrait) {
+    flex-direction: column;
+  }
+  justify-content: space-around;
+  align-content: center;
 }
 
 .projects__showcase > a:link {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .projects__showcase > a:visited {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .projects__showcase--figure {
-    width: 15vw;
-    @media (orientation: portrait) {
-        width: 70vw;
-    }
-    transition: transform 0.2s ease;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  width: 12vw;
+  @media (orientation: portrait) {
+    width: 70vw;
+  }
+  transition: transform 0.2s ease;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .projects__showcase--figure:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .projects__showcase--figure > video {
-    width: 100%;
-    filter: brightness(40%) sepia(100%) hue-rotate(-110deg) saturate(600%) contrast(0.8);
-    background-color: rgba($accent_color, 0.5);
-    transition: filter 0.5s ease;
-    border-radius: 2vh;
+  width: 100%;
+  filter: brightness(40%) sepia(100%) hue-rotate(-110deg) saturate(600%)
+    contrast(0.8);
+  background-color: rgba($accent_color, 0.5);
+  transition: filter 0.5s ease;
+  border-radius: 2vh;
 }
 
 .projects__showcase--figure > video:hover {
-    width: 100%;
-    filter: brightness(100%) sepia(0%) hue-rotate(0deg) saturate(100%) contrast(1);
+  width: 100%;
+  filter: brightness(100%) sepia(0%) hue-rotate(0deg) saturate(100%) contrast(1);
 }
 
 .projects__showcase--figure > figcaption {
-    position: relative;
-    padding: 2vh;
-    bottom: 10vh;
-    font-family: "Poppins-Medium", sans-serif;
-    color: $base_color;
-    font-size: calc(0.7vh + 0.7vw);
-    text-align: center;
-    @media (orientation: portrait) {
-        font-size: calc(1.2vh + 1.2vw);
-    }
+  position: relative;
+  padding: 2vh;
+  bottom: 10vh;
+  font-family: "Poppins-Medium", sans-serif;
+  color: $base_color;
+  font-size: calc(0.7vh + 0.7vw);
+  text-align: center;
+  @media (orientation: portrait) {
+    font-size: calc(1.2vh + 1.2vw);
+  }
 }
 
 .contact {
-    width: 100%;
-    height: 100vh;
-    top: 100%;
-    background-color: $accent_color;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100vh;
+  top: 100%;
+  background-color: $accent_color;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .contact__h1 {
-    padding-top: calc(2vh + 2vw);
-    text-align: center;
-    color: $base_color;
+  padding-top: calc(2vh + 2vw);
+  text-align: center;
+  color: $base_color;
 }
 
 .contact__div {
-    width: 70vw;
-    padding: 10vw;
-    font-size: calc(1vh + 1vw);
-    color: $base_color;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  width: 70vw;
+  padding: 10vw;
+  font-size: calc(1vh + 1vw);
+  color: $base_color;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .contact__details {
-    width: 60vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    @media (orientation: portrait) {
-        flex-direction: column;
-    }
+  width: 60vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  @media (orientation: portrait) {
+    flex-direction: column;
+  }
 }
 
 .contact__details > a > img {
-    width: 3vw;
-    padding: 1.5vw;
-    @media (orientation: portrait) {
-        width: 12vw;
-        padding: 3vw;
-    }
+  width: 3vw;
+  padding: 1.5vw;
+  @media (orientation: portrait) {
+    width: 12vw;
+    padding: 3vw;
+  }
 }
 
 .contact__div > svg {
-    width: 5vw;
-    @media (orientation: portrait) {
-        width: 10vw;
-        padding-top: 15vh;
-    }
-    fill: $base_color;
+  width: 5vw;
+  @media (orientation: portrait) {
+    width: 10vw;
+    padding-top: 15vh;
+  }
+  fill: $base_color;
 }
 
 .contact__details {
-    padding: calc(2vh + 2vw);
-    font-size: calc(1vh + 1vw);
-    color: $base_color;
-    font-family: "Poppins-Regular", sans-serif;
+  padding: calc(2vh + 2vw);
+  font-size: calc(1vh + 1vw);
+  color: $base_color;
+  font-family: "Poppins-Regular", sans-serif;
 }
 
 .contact__details > a > h1 {
-    font-size: calc(1.5vh + 1.5vw);
-    color: $base_color;
-    font-family: "Poppins-Regular", sans-serif;
+  font-size: calc(1.5vh + 1.5vw);
+  color: $base_color;
+  font-family: "Poppins-Regular", sans-serif;
 }
 
 //animations
 @keyframes fade_in {
-    0% {
-        opacity: 0;
-    }
-    15% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 0.3
-    }
+  0% {
+    opacity: 0;
+  }
+  15% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0.3;
+  }
 }
 
 @keyframes fade_in_logo {
-    0% {
-        opacity: 0;
-    }
-    10% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
